--- a/taller5JApodaca/cbtis_app/templates/index.html
+++ b/taller5JApodaca/cbtis_app/templates/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="es">
 <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Frida Apodaca</title>
+        <title>Grupo 5J</title>
+        <link rel="stylesheet" href="{% static 'estilos.css' %}">
 </head>
 <body>
-    <h1>proyecto cbtis </h1>
+
+    <h1>hola KADSJKASHA</h1>
+    <script src="{% static 'script.js' %}"></script>
+
 </body>
 </html>
